--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,16 @@ dist.jar=${dist.dir}/AnalizadorDeCodigoC_V1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.edisoncorSX.jar=../CalculoDeResistencias/dist/lib/edisoncorSX.jar
+file.reference.java-cup-11a.jar=..\\..\\..\\Downloads\\java-cup-11a.jar
+file.reference.java_cup.jar=..\\..\\..\\Downloads\\java_cup.jar
+file.reference.JFlex.jar=..\\..\\..\\Downloads\\JFlex Libreria - By Cisco GT\\JFlex.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.edisoncorSX.jar}
+    ${file.reference.edisoncorSX.jar}:\
+    ${file.reference.JFlex.jar}:\
+    ${file.reference.java-cup-11a.jar}:\
+    ${file.reference.java_cup.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
