--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -18,8 +18,12 @@ build.test.results.dir=${build.dir}/test/results
 #debug.transport=dt_socket
 debug.classpath=\
     ${run.classpath}
+debug.modulepath=\
+    ${run.modulepath}
 debug.test.classpath=\
     ${run.test.classpath}
+debug.test.modulepath=\
+    ${run.test.modulepath}
 # Files in build.classes.dir which should be excluded from distribution jar
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
@@ -27,7 +31,9 @@ dist.dir=dist
 dist.jar=${dist.dir}/AnalizadorDeCodigoC_V1.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.compilerTools-2.3.7.jar=..\\..\\..\\Downloads\\compilerTools-2.3.7.jar
 file.reference.edisoncorSX.jar=../CalculoDeResistencias/dist/lib/edisoncorSX.jar
+file.reference.flatlaf-2.2.jar=..\\..\\..\\Downloads\\flatlaf-2.2.jar
 file.reference.java-cup-11a.jar=..\\..\\..\\Downloads\\java-cup-11a.jar
 file.reference.java_cup.jar=..\\..\\..\\Downloads\\java_cup.jar
 file.reference.JFlex.jar=..\\..\\..\\Downloads\\JFlex Libreria - By Cisco GT\\JFlex.jar
@@ -37,11 +43,15 @@ javac.classpath=\
     ${file.reference.edisoncorSX.jar}:\
     ${file.reference.JFlex.jar}:\
     ${file.reference.java-cup-11a.jar}:\
-    ${file.reference.java_cup.jar}
+    ${file.reference.java_cup.jar}:\
+    ${file.reference.compilerTools-2.3.7.jar}:\
+    ${file.reference.flatlaf-2.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
+javac.modulepath=
+javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -49,6 +59,8 @@ javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+javac.test.modulepath=\
+    ${javac.modulepath}
 javac.test.processorpath=\
     ${javac.test.classpath}
 javadoc.additionalparam=
@@ -74,9 +86,13 @@ run.classpath=\
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
 run.jvmargs=
+run.modulepath=\
+    ${javac.modulepath}
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
+run.test.modulepath=\
+    ${javac.test.modulepath}
 source.encoding=UTF-8
 src.dir=src
 test.src.dir=test
